[workspace]
resolver = "3"
members = ["client", "common/healpix", "common/mesh", "server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
bevy_math = { version = "0.16.1", default-features = false, features = ["std"] }

[package]
name = "factor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
