[workspace]
resolver = "3"
members = ["client", "common/healpix", "common/mesh", "server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false, features = ["bevy_log", "multi_threaded", "std"] }
bevy_ecs = { version = "0.16.1", default-features = false }
bevy_ecs_macros = { version = "0.16.1", default-features = false }
bevy_flycam = "0.16.1"
bevy_math = { version = "0.16.1", default-features = false, features = ["std"] }
bevy-gui = { package = "bevy", version = "0.16.1", default-features = false, features = ["bevy_log", "bevy_pbr", "bevy_render", "bevy_text", "bevy_ui", "bevy_ui_picking_backend", "bevy_window", "tonemapping_luts", "webgl2", "x11", "multi_threaded", "std"] }
bytemuck = "1.23.2"

[package]
name = "factor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
