[package]
name = "factor-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
postcard = { version = "1.1.3", features = ["use-std"], optional = true }
redb.workspace = true
serde = { version = "1.0.219", optional = true }

[features]
default = ["postcard"]
postcard = ["dep:postcard", "dep:serde"]
