[package]
name = "factor-terrain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy_color = { version = "0.16.2", default-features = false, features = ["std"] }
factor-db.workspace = true
factor-world.workspace = true
redb.workspace = true

[dev-dependencies]
bevy-gui.workspace = true
